--- a/cv.Rmd
+++ b/cv.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 library(magrittr) # For the pipe
 library(tidyverse)
 library(viridis)
+library(ggridges)
 source("cv_printing_functions.r")
 
 # Read in all data and initialize a CV printer object
@@ -29,7 +30,6 @@ CV <- create_CV_object(
 )
 
 ```
-
 
 ```{r}
 # When in pdf export mode the little dots are unaligned, so fix that with some conditional CSS.
@@ -43,29 +43,52 @@ if(params$pdf_mode) {
 }
 ```
 
-
 Aside
 ================================================================================
 
-```{r dpi = 144, fig.height=1, fig.width=1}
+```{r dpi = 300, message = FALSE, fig.width=4, fig.height=5}
 # Build interactive network of positions colored by section
 # and connected if they occurred in the same year
-datadrivencv::build_network_logo(CV$entries_data)
+# datadrivencv::build_network_logo(CV$entries_data)
 # m_exp <- function(l, r, d) {
 #   x <- seq(0, d, length = l)
-#   y <- dexp(x, rate = r)
+#   y <- dexp(x, rate = r, log = F)
 #   z <- r
 #   tibble(x, y, z)
 # }
 # map(1:1000, ~m_exp(100, .x, .005)) %>%
 #   tibble() %>%
-#   unnest(everything()) %>%
+#   unnest(everything()) %>% 
+#   filter(y > 0) %>% 
 #   ggplot(aes(x + 1, y, color = z, group = z)) +
 #   geom_line(show.legend = F, alpha = .75) +
-#   #scale_x_sqrt() +
+#   #scale_x_reverse() +
 #   scale_y_log10() +
 #   scale_color_viridis(option = "D") +
-#   theme_void() 
+#   theme_void() + 
+#   theme(panel.background = element_rect(fill = '#f7fbff', colour = '#f7fbff'))
+
+read_csv("pulsar.csv", col_names = F, ) %>%
+  mutate(lng = row_number()) %>% 
+  gather(lat, height, -lng) %>%
+  mutate(
+    lat = sub("^X", "", lat) %>% as.integer()
+  ) %>% 
+  filter(lat %in% 65:235) %>% 
+  as_tibble() -> pulsar
+
+ggplot(pulsar, aes(x = lat, y = lng, height = height, group = lng, fill = lng)) +
+  geom_ridgeline(
+    min_height = -2,
+    scale = 0.3,
+    alpha = .75,
+    color = "#f7fbff",
+    show.legend = F
+  ) +
+  scale_y_reverse() +
+  theme_void() +
+  scale_fill_viridis(option = "B", end = .8) +
+  theme(panel.background = element_rect(fill = '#f7fbff', colour = '#f7fbff'))
 ```
 
 
